--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=tcms
 spring.datasource.url=jdbc:postgresql://localhost:5432/tbf_db
 spring.datasource.username=postgres
 spring.datasource.password=77833623
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# Flyway configuration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
