--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.format_sql=true
 # Flyway configuration
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/tcms-realm
