--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>4.0.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+ <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>4.0.0</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 	<groupId>com.tbf</groupId>
 	<artifactId>tcms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -30,6 +30,12 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+        <!-- OpenAPI/Swagger UI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -110,9 +116,36 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
-	</dependencies>
+ </dependencies>
 
-	<build>
+ <repositories>
+   <repository>
+     <id>central</id>
+     <name>Maven Central</name>
+     <url>https://repo1.maven.org/maven2/</url>
+     <releases><enabled>true</enabled></releases>
+     <snapshots><enabled>false</enabled></snapshots>
+   </repository>
+   <repository>
+     <id>sonatype</id>
+     <name>Sonatype Releases</name>
+     <url>https://oss.sonatype.org/content/repositories/releases/</url>
+     <releases><enabled>true</enabled></releases>
+     <snapshots><enabled>false</enabled></snapshots>
+   </repository>
+ </repositories>
+
+ <pluginRepositories>
+   <pluginRepository>
+     <id>central</id>
+     <name>Maven Central</name>
+     <url>https://repo1.maven.org/maven2/</url>
+     <releases><enabled>true</enabled></releases>
+     <snapshots><enabled>false</enabled></snapshots>
+   </pluginRepository>
+ </pluginRepositories>
+
+ <build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
