--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/tcms-realm
+
+# OpenAPI/Swagger UI
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
