--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=tcms
-spring.datasource.url=jdbc:postgresql://localhost:5432/tbf_db
-spring.datasource.username=postgres
-spring.datasource.password=77833623
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/tcms-realm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI}
 
 # OpenAPI/Swagger UI
 springdoc.api-docs.path=/v3/api-docs
